<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.dhbw.rahmlab</groupId>
	<artifactId>GeomAlgeLang</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>jar</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<skipTests>true</skipTests>
		<graalvm.version>22.0.0.2</graalvm.version>
		<antlr.version>4.11.1</antlr.version>
	</properties>
	<repositories>
		<repository>
			<id>1. Maven Central</id>
			<url>https://repo1.maven.org/maven2/</url>
		</repository>
		<repository>
			<id>2. jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>
	<dependencies>
		<!-- Needs to be antlr4-master. antlr4-maven-plugins doesn't work here. -->
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4-master</artifactId>
			<version>${antlr.version}</version>
			<scope>compile</scope>
			<type>pom</type>
		</dependency>
		<!-- Needed for AntlrTestRig -->
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4</artifactId>
			<version>${antlr.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.8.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.graalvm.truffle</groupId>
			<artifactId>truffle-api</artifactId>
			<version>${graalvm.version}</version>
		</dependency>
		<dependency>
			<groupId>org.graalvm.truffle</groupId>
			<artifactId>truffle-dsl-processor</artifactId>
			<version>${graalvm.version}</version>
		</dependency>
		<dependency>
			<!-- https://www.graalvm.org/22.0/reference-manual/embed-languages/#dependency-setup -->
			<groupId>org.graalvm.sdk</groupId>
			<artifactId>graal-sdk</artifactId>
			<version>${graalvm.version}</version>
		</dependency>
		<dependency>
			<groupId>com.github.JogAmp</groupId>
			<artifactId>vecmath</artifactId>
			<version>1.7.0-final</version>
		</dependency>
		<dependency>
			<groupId>de.orat.math.cga</groupId>
			<artifactId>ConformalGeometricAlgebra</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
		<!-- indirect dependency introduced via ConformalGeometricAlgebra -->
		<dependency>
			<groupId>de.orat.math.ga</groupId>
			<artifactId>GeometricAlgebra</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.antlr</groupId>
				<artifactId>antlr4-maven-plugin</artifactId>
				<version>${antlr.version}</version>
				<configuration>
					<listener>true</listener>
					<visitor>true</visitor>
					<treatWarningsAsErrors>true</treatWarningsAsErrors>
					<detail>true</detail>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>antlr4</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M7</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<argLine>-Dgraalvm.locatorDisabled=true -Dfile.encoding=UTF-8 --add-exports org.graalvm.truffle/com.oracle.truffle.api.nodes=ALL-UNNAMED --add-exports org.graalvm.truffle/com.oracle.truffle.api.exception=ALL-UNNAMED --add-exports org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED</argLine>
					<skipTests>${skipTests}</skipTests>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<compilerArgs>
						<arg>--add-exports</arg>
						<arg>org.graalvm.truffle/com.oracle.truffle.api.nodes=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>org.graalvm.truffle/com.oracle.truffle.api.exception=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.2</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>de.dhbw.rahmlab.geomalgelang.test.App</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
